# bazel-examples

./: README.md
.github/workflows/: ci.yml
cpp-hermetic/: .bazelrc  .cpp.bazelrc  BUILD.bazel  MODULE.bazel  README.md
cpp-hermetic-zig/: .cpp.bazelrc  MODULE.bazel
cpp-hermetic/src/: main.cpp
