"""Example: C++ with Hermetic Toolchain using Zig"""

module(
    name = "cpp-hermetic-zig",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.5")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.2.0")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(
    zig_toolchains,
    "zig_sdk",
    "zig_sdk-linux-amd64",
    "zig_sdk-linux-arm64",
    "zig_sdk-macos-amd64",
    "zig_sdk-macos-arm64",
    "zig_sdk-windows-amd64",
)

register_toolchains(
    "@zig_sdk//...",
)
